syntax = "proto3";
package ory.keto.relation_tuples.v1alpha2;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option csharp_namespace = "Ory.Keto.RelationTuples.v1alpha2";
option go_package = "github.com/ory/keto/proto/ory/keto/relation_tuples/v1alpha2;rts";
option java_multiple_files = true;
option java_outer_classname = "NamespacesServiceProto";
option java_package = "sh.ory.keto.relation_tuples.v1alpha2";
option php_namespace = "Ory\\Keto\\RelationTuples\\v1alpha2";

// The service to query namespaces.
//
// This service is part of the [read-APIs](../concepts/25_api-overview.mdx#read-apis).
service NamespacesService {
  // Lists Namespaces
  //
  // Get all namespaces.
  rpc ListNamespaces(ListNamespacesRequest) returns (ListNamespacesResponse) {
    option (google.api.http) = {get: "/namespaces"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "relationship"
      operation_id: "listRelationshipNamespaces"
      responses: {
        key: "200"
        value: {
          description: "The list of namespaces."
          examples: {
            key: "application/json"
            value: "{ \"namespaces\": [ { \"name\": \"my namespace\" } ] }"
          }
          schema: {
            json_schema: {ref: ".ory.keto.relation_tuples.v1alpha2.ListNamespacesResponse"}
          }
        }
      }
    };
  }
}

// Request for ReadService.ListNamespaces RPC.
message ListNamespacesRequest {}

message ListNamespacesResponse {
  repeated Namespace namespaces = 1;
}

message Namespace {
  string name = 1;
}
